--- a/css/team-website.css
+++ b/css/team-website.css
@@ -1,5 +1,6 @@
 body {
     background-color: lightgray;
+    text-align: center;
 }
 
 .circle {
@@ -7,24 +8,28 @@ body {
     width: 10em;
     background-color: lime;
     border-radius: 50%;
-    border: .5em solid white;
+    border: .3em solid white;
     display: inline-block;
 }
-
+.circle h4 {
+    padding-top: 2em;
+    font-size: 1.5em;
+    font-weight: bold;
+}
 #red {
-
+    background-color: red;
 }
 
 #blue {
-
+    background-color: blue;
 }
 
 #orange {
-
+    background-color: orange;
 }
 
 #green {
-
+    background-color: green;
 }
 
 #bottom {
